--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="./src/assets/perro.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Runedev</title>
+    <link rel="stylesheet" href="./src/index.css">
+    <title>ItNotes</title>
   </head>
   <body>
     <div id="root"></div>
